Apply gitar comments